[gd_scene load_steps=2 format=3 uid="uid://bkfx7hno0ss2o"]

[ext_resource type="Script" uid="uid://2v17pxy4efn6" path="res://common/components/temperature/temperature_component.gd" id="1_52qod"]

[node name="TemperatureComponent" type="Area2D"]
script = ExtResource("1_52qod")

[node name="Timer" type="Timer" parent="."]

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
